fixed some alignment issues on homepage

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,10 +158,9 @@ body {
     }
 
     main i {
-      padding-left: 120px;
-      
+      padding-left: 120px;    
     }
-
+  
     main p {
       padding-top: 10px;
     }
@@ -250,3 +249,6 @@ body {
   padding-bottom: 20px;
 }
 
+.col-md-5 {
+  @media only screen and (min-width: 600px) {..}
+}
